[gd_scene load_steps=19 format=3 uid="uid://df0ivw703jsfh"]

[ext_resource type="Script" path="res://alpha_levels/lashing_binding_test_area/lashing_binding_test_area.gd" id="1_l0wlg"]
[ext_resource type="PackedScene" uid="uid://dlni0vkfjodkp" path="res://scenes/control.tscn" id="2_t7p85"]
[ext_resource type="Environment" uid="uid://cecgvgme5tytb" path="res://resources/enviroments/world.tres" id="3_yrmdt"]
[ext_resource type="PackedScene" uid="uid://die75m3up6sa4" path="res://scenes/player.tscn" id="4_qv8cy"]
[ext_resource type="PackedScene" uid="uid://dpw0va0tvjoeb" path="res://scenes/platform.tscn" id="5_wlm11"]
[ext_resource type="Material" uid="uid://bm87sn21ahp7b" path="res://materials/white_platform.tres" id="6_7igs8"]
[ext_resource type="PackedScene" uid="uid://cnl2x6g81er81" path="res://scenes/column.tscn" id="6_ivkto"]
[ext_resource type="PackedScene" uid="uid://dfllykgtovd4s" path="res://scenes/lashable_object.tscn" id="7_l44cq"]
[ext_resource type="PackedScene" uid="uid://bbydprljo5a8y" path="res://scenes/floor_switch.tscn" id="8_dsky8"]
[ext_resource type="PackedScene" uid="uid://dtdp7r7qge7gs" path="res://scenes/small_spikes.tscn" id="10_fryh8"]
[ext_resource type="PackedScene" uid="uid://qbadlqjemld3" path="res://scenes/wooden_lever.tscn" id="10_tbetn"]
[ext_resource type="PackedScene" uid="uid://ceurwkiwlsyvw" path="res://scenes/door.tscn" id="11_krxke"]
[ext_resource type="PackedScene" uid="uid://cre125ah8sybk" path="res://resources/map_tiles/grid_map.tscn" id="13_mdvm3"]
[ext_resource type="PackedScene" uid="uid://b1vevmbvhh2j5" path="res://scenes/gemstone.tscn" id="14_r6n08"]
[ext_resource type="PackedScene" path="res://materials/gem.tscn" id="15_pdkwm"]
[ext_resource type="PackedScene" uid="uid://bxfdyvejecpg1" path="res://scenes/window_manager.tscn" id="17_wsa0b"]

[sub_resource type="BoxShape3D" id="BoxShape3D_jypxi"]
size = Vector3(50, 0.4, 50)

[sub_resource type="BoxMesh" id="BoxMesh_5cv2e"]
material = ExtResource("6_7igs8")
size = Vector3(50, 0.4, 50)

[node name="World" type="Node3D"]
script = ExtResource("1_l0wlg")

[node name="Control" parent="." instance=ExtResource("2_t7p85")]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource("3_yrmdt")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.29404, -0.819275, 0.49227, 0, 0.515038, 0.857167, -0.955793, 0.252042, -0.151442, -29.4104, 0, 0)
shadow_enabled = true

[node name="Player" parent="." instance=ExtResource("4_qv8cy")]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -29.4104, 3.2713, 0)

[node name="Platform" parent="." instance=ExtResource("5_wlm11")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.290324, 0, -0.642425)

[node name="Collision" parent="Platform" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -29.4104, 0, 0)
shape = SubResource("BoxShape3D_jypxi")

[node name="Mesh" parent="Platform" index="1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -29.4104, 0, 0)
mesh = SubResource("BoxMesh_5cv2e")

[node name="Platform2" parent="." instance=ExtResource("5_wlm11")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -35.7724, 8.70489, 13.2084)

[node name="Column" parent="." instance=ExtResource("6_ivkto")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -36.8532, 5.95862, -14.7837)

[node name="LashableObject" parent="." instance=ExtResource("7_l44cq")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -29.6267, 3.88159, -12.1756)

[node name="FloorSwitch" parent="." instance=ExtResource("8_dsky8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -36.1456, 0.227904, -4.53073)

[node name="SmallSpikes" parent="." instance=ExtResource("10_fryh8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -41.9858, 0.330856, 0.062198)

[node name="WoodenLever" parent="." instance=ExtResource("10_tbetn")]
transform = Transform3D(2.05, 0, 0, 0, 2.05, 0, 0, 0, 2.05, -42.2608, 0.272276, 4.82249)

[node name="Door" parent="." instance=ExtResource("11_krxke")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -20.0637, 2.56557, -1.39943)

[node name="Platform3" parent="." instance=ExtResource("5_wlm11")]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, -28.2587, 3.43119, 16.5015)
metadata/bindable = false

[node name="GridMap" parent="." instance=ExtResource("13_mdvm3")]
data = {
"cells": PackedInt32Array(131066, 65532, 851971, 131069, 65531, 851971, 131068, 65531, 851971, 131070, 65531, 851971, 196606, 65531, 851971, 196605, 65531, 851971, 196604, 65531, 851971, 262142, 65531, 851971, 262141, 65531, 851971, 262140, 65531, 851971, 131066, 65533, 1, 131065, 65532, 1441793, 131066, 65531, 655361, 131067, 65532, 1048577, 131069, 65535, 1048579, 131068, 65535, 1441792, 131069, 0, 0, 131070, 65535, 1048576, 131069, 65534, 655360, 65530, 65528, 1441794, 65530, 65527, 1441794, 65530, 65526, 1441794, 65530, 65525, 1441794, 65530, 65524, 1441794, 65530, 65523, 1441794, 65530, 65522, 1441794, 65531, 65528, 1441794, 65531, 65527, 1441794, 65531, 65526, 1441794, 65531, 65525, 1441794, 65531, 65524, 1441794, 65531, 65523, 1441794, 65531, 65522, 1441794, 65529, 65528, 1441795, 65529, 65527, 1441795, 65529, 65526, 1441795, 65529, 65525, 1441795, 65529, 65524, 1441795, 65529, 65523, 1441795, 65529, 65522, 1441795, 65532, 65528, 1441795, 65532, 65527, 1441795, 65532, 65526, 1441795, 65532, 65525, 1441795, 65532, 65524, 1441795, 65532, 65523, 1441795, 65532, 65522, 1441795, 131065, 65528, 1441795, 131065, 65527, 1441795, 131065, 65526, 1441795, 131065, 65525, 1441795, 131065, 65524, 1441795, 131065, 65523, 1441795, 131065, 65522, 1441795, 131068, 65528, 1441795, 131068, 65527, 1441795, 131068, 65526, 1441795, 131068, 65525, 1441795, 131068, 65524, 1441795, 131068, 65523, 1441795, 131068, 65522, 1441795, 196604, 65528, 1441795, 196603, 65528, 1441795, 196602, 65528, 1441795, 196601, 65528, 1441795, 196601, 65527, 1441795, 196602, 65527, 1441795, 196603, 65527, 1441795, 196604, 65527, 1441795, 196604, 65526, 1441795, 196603, 65526, 1441795, 196602, 65526, 1441795, 196601, 65526, 1441795, 196601, 65525, 1441795, 196602, 65525, 1441795, 196603, 65525, 1441795, 196603, 65524, 1441795, 196604, 65524, 1441795, 196604, 65525, 1441795, 196602, 65524, 1441795, 196601, 65524, 1441795, 196601, 65523, 1441795, 196602, 65523, 1441795, 196603, 65523, 1441795, 196604, 65523, 1441795, 196604, 65522, 1441795, 196603, 65522, 1441795, 196602, 65522, 1441795, 196601, 65522, 1441795, 65521, 65533, 2, 65521, 65534, 2, 65521, 65535, 2, 65520, 65535, 2, 65519, 65535, 2, 65518, 65535, 2, 65517, 65535, 2, 65516, 65535, 2, 65515, 65535, 2, 65514, 65535, 2, 65514, 65534, 2, 65514, 65533, 2, 65515, 65533, 2, 65516, 65533, 2, 65517, 65533, 2, 65518, 65533, 2, 65519, 65533, 2, 65520, 65533, 2, 65520, 65534, 2, 65519, 65534, 2, 65518, 65534, 2, 65517, 65534, 2, 65516, 65534, 2, 65515, 65534, 2, 65513, 65532, 3, 65514, 65532, 3, 65515, 65532, 3, 65516, 65532, 3, 65517, 65532, 3, 65518, 65532, 3, 65519, 65532, 3, 65520, 65532, 3, 65521, 65532, 3, 65513, 0, 3, 65514, 0, 3, 65515, 0, 3, 65516, 0, 3, 65517, 0, 3, 65518, 0, 3, 65519, 0, 3, 65520, 0, 3, 65521, 0, 3, 131049, 0, 3, 131050, 0, 3, 131051, 0, 3, 131052, 0, 3, 131053, 0, 3, 131054, 0, 3, 131055, 0, 3, 131056, 0, 3, 131057, 0, 3, 131050, 65532, 3, 131051, 65532, 3, 131052, 65532, 3, 131053, 65532, 3, 131054, 65532, 3, 131055, 65532, 3, 131056, 65532, 3, 131057, 65532, 3, 196585, 65532, 3, 196586, 65532, 3, 196587, 65532, 3, 196588, 65532, 3, 196589, 65532, 3, 196590, 65532, 3, 196591, 65532, 3, 196592, 65532, 3, 196593, 65532, 3, 196585, 0, 3, 196586, 0, 3, 196587, 0, 3, 196588, 0, 3, 196589, 0, 3, 196590, 0, 3, 196591, 0, 3, 196592, 0, 3, 196593, 0, 3, 196594, 0, 3, 262121, 0, 3, 262121, 65532, 3, 262121, 65533, 3, 262121, 65534, 3, 262121, 65535, 3, 262122, 65532, 3, 262122, 65533, 3, 262122, 65534, 3, 262122, 65535, 3, 262122, 0, 3, 262123, 65532, 3, 262123, 65533, 3, 262123, 65534, 3, 262123, 65535, 3, 262123, 0, 3, 262124, 65532, 3, 262124, 65533, 3, 262124, 65534, 3, 262124, 65535, 3, 262124, 0, 3, 262125, 65532, 3, 262125, 65533, 3, 262125, 65534, 3, 262125, 65535, 3, 262125, 0, 3, 262126, 65532, 3, 262126, 65533, 3, 262126, 65534, 3, 262126, 65535, 3, 262126, 0, 3, 262127, 65532, 3, 262127, 65533, 3, 262127, 65534, 3, 262127, 65535, 3, 262127, 0, 3, 262128, 65532, 3, 262128, 65533, 3, 262128, 65534, 3, 262128, 65535, 3, 262128, 0, 3, 262129, 65532, 3, 262129, 65533, 3, 262129, 65534, 3, 262129, 65535, 3, 262129, 0, 3, 196589, 65535, 655361, 196589, 65533, 1, 131055, 65533, 0, 131055, 65535, 655360, 131051, 65535, 655360, 131049, 65532, 3, 131051, 65533, 0)
}
metadata/_editor_floor_ = Vector3(0, 1, 0)

[node name="Gemstone" parent="." instance=ExtResource("14_r6n08")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -23.8867, 3.45825, -9.11979)

[node name="Gemstone3" parent="." instance=ExtResource("14_r6n08")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -37.8753, 3.45825, -9.11979)

[node name="Gemstone4" parent="." instance=ExtResource("14_r6n08")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -37.8753, 3.45825, 3.24101)

[node name="Gemstone5" parent="." instance=ExtResource("14_r6n08")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -25.7167, 3.45825, 3.24101)

[node name="Gemstone6" parent="." instance=ExtResource("14_r6n08")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -13.1063, 3.45825, 3.24101)

[node name="Gemstone2" parent="." instance=ExtResource("14_r6n08")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 15.4325, 3.45825, -9.11979)

[node name="gem" parent="." instance=ExtResource("15_pdkwm")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -24.645, 3.97682, -4.46022)

[node name="WindowManager" parent="." instance=ExtResource("17_wsa0b")]

[connection signal="death_animation_done" from="Control" to="." method="_on_control_death_animation_done"]
[connection signal="action_key_pressed" from="Player" to="." method="_on_player_action_key_pressed"]
[connection signal="control_clicked" from="Player" to="." method="_on_player_control_clicked"]
[connection signal="player_killed" from="Player" to="." method="_on_player_player_killed"]

[editable path="Platform"]
